@@ -1,7 +1,7 @@
 /*
- * Hello Minecraft! Launcher.
- * Copyright (C) 2018  huangyuhui <huanghongxun2008@126.com>
- * 
+ * Hello Minecraft! Launcher
+ * Copyright (C) 2020  huangyuhui <huanghongxun2008@126.com> and contributors
+ *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
  * the Free Software Foundation, either version 3 of the License, or
@@ -13,14 +13,19 @@
  * GNU General Public License for more details.
  *
  * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see {http://www.gnu.org/licenses/}.
+ * along with this program.  If not, see <https://www.gnu.org/licenses/>.
  */
 package org.jackhuang.hmcl.game;
 
-import org.jackhuang.hmcl.util.JavaVersion;
+import org.jackhuang.hmcl.util.platform.JavaVersion;
+import org.jetbrains.annotations.NotNull;
 
 import java.io.File;
 import java.io.Serializable;
+import java.net.Proxy;
+import java.util.ArrayList;
+import java.util.Collections;
+import java.util.List;
 
 /**
  *
@@ -31,9 +36,10 @@ public class LaunchOptions implements Serializable {
     private File gameDir;
     private JavaVersion java;
     private String versionName;
+    private String versionType;
     private String profileName;
-    private String minecraftArgs;
-    private String javaArgs;
+    private List<String> gameArguments = new ArrayList<>();
+    private List<String> javaArguments = new ArrayList<>();
     private Integer minMemory;
     private Integer maxMemory;
     private Integer metaspace;
@@ -42,12 +48,13 @@ public class LaunchOptions implements Serializable {
     private boolean fullscreen;
     private String serverIp;
     private String wrapper;
-    private String proxyHost;
-    private String proxyPort;
+    private Proxy proxy;
     private String proxyUser;
     private String proxyPass;
     private boolean noGeneratedJVMArgs;
     private String preLaunchCommand;
+    private NativesDirectoryType nativesDirType;
+    private String nativesDir;
 
     /**
      * The game directory
@@ -72,6 +79,14 @@ public class LaunchOptions implements Serializable {
     }
 
     /**
+     * Will shown in the left bottom corner of the main menu of Minecraft.
+     * null if use Version.versionType.
+     */
+    public String getVersionType() {
+        return versionType;
+    }
+
+    /**
      * Don't know what the hell this is.
      */
     public String getProfileName() {
@@ -81,15 +96,17 @@ public class LaunchOptions implements Serializable {
     /**
      * User custom additional minecraft command line arguments.
      */
-    public String getMinecraftArgs() {
-        return minecraftArgs;
+    @NotNull
+    public List<String> getGameArguments() {
+        return Collections.unmodifiableList(gameArguments);
     }
 
     /**
      * User custom additional java virtual machine command line arguments.
      */
-    public String getJavaArgs() {
-        return javaArgs;
+    @NotNull
+    public List<String> getJavaArguments() {
+        return Collections.unmodifiableList(javaArguments);
     }
 
     /**
@@ -151,17 +168,10 @@ public class LaunchOptions implements Serializable {
     }
 
     /**
-     * The host of the proxy address
+     * Proxy settings
      */
-    public String getProxyHost() {
-        return proxyHost;
-    }
-
-    /**
-     * the port of the proxy address.
-     */
-    public String getProxyPort() {
-        return proxyPort;
+    public Proxy getProxy() {
+        return proxy;
     }
 
     /**
@@ -192,12 +202,179 @@ public class LaunchOptions implements Serializable {
         return preLaunchCommand;
     }
 
+    /**
+     * 0 - ./minecraft/versions/&lt;version&gt;/natives
+     * 1 - custom natives directory
+     */
+    public NativesDirectoryType getNativesDirType() {
+        return nativesDirType;
+    }
+
+    /**
+     * Path to the natives directory, optional
+     */
+    public String getNativesDir() {
+        return nativesDir;
+    }
+
     public static class Builder {
 
         private final LaunchOptions options = new LaunchOptions();
 
         public LaunchOptions create() {
             return options;
+        }
+
+        /**
+         * The game directory
+         */
+        public File getGameDir() {
+            return options.gameDir;
+        }
+
+        /**
+         * The Java Environment that Minecraft runs on.
+         */
+        public JavaVersion getJava() {
+            return options.java;
+        }
+
+        /**
+         * Will shown in the left bottom corner of the main menu of Minecraft.
+         * null if use the id of launch version.
+         */
+        public String getVersionName() {
+            return options.versionName;
+        }
+
+        /**
+         * Will shown in the left bottom corner of the main menu of Minecraft.
+         * null if use Version.versionType.
+         */
+        public String getVersionType() {
+            return options.versionType;
+        }
+
+        /**
+         * Don't know what the hell this is.
+         */
+        public String getProfileName() {
+            return options.profileName;
+        }
+
+        /**
+         * User custom additional minecraft command line arguments.
+         */
+        public List<String> getGameArguments() {
+            return options.gameArguments;
+        }
+
+        /**
+         * User custom additional java virtual machine command line arguments.
+         */
+        public List<String> getJavaArguments() {
+            return options.javaArguments;
+        }
+
+        /**
+         * The minimum memory that the JVM can allocate.
+         */
+        public Integer getMinMemory() {
+            return options.minMemory;
+        }
+
+        /**
+         * The maximum memory that the JVM can allocate.
+         */
+        public Integer getMaxMemory() {
+            return options.maxMemory;
+        }
+
+        /**
+         * The maximum metaspace memory that the JVM can allocate.
+         * For Java 7 -XX:PermSize and Java 8 -XX:MetaspaceSize
+         * Containing class instances.
+         */
+        public Integer getMetaspace() {
+            return options.metaspace;
+        }
+
+        /**
+         * The initial game window width
+         */
+        public Integer getWidth() {
+            return options.width;
+        }
+
+        /**
+         * The initial game window height
+         */
+        public Integer getHeight() {
+            return options.height;
+        }
+
+        /**
+         * Is inital game window fullscreen.
+         */
+        public boolean isFullscreen() {
+            return options.fullscreen;
+        }
+
+        /**
+         * The server ip that will connect to when enter game main menu.
+         */
+        public String getServerIp() {
+            return options.serverIp;
+        }
+
+        /**
+         * i.e. optirun
+         */
+        public String getWrapper() {
+            return options.wrapper;
+        }
+
+        /**
+         * Proxy settings
+         */
+        public Proxy getProxy() {
+            return options.proxy;
+        }
+
+        /**
+         * The user name of the proxy, optional.
+         */
+        public String getProxyUser() {
+            return options.proxyUser;
+        }
+
+        /**
+         * The password of the proxy, optional
+         */
+        public String getProxyPass() {
+            return options.proxyPass;
+        }
+
+        /**
+         * Prevent game launcher from generating default JVM arguments like max memory.
+         */
+        public boolean isNoGeneratedJVMArgs() {
+            return options.noGeneratedJVMArgs;
+        }
+
+        /**
+         * Called command line before launching the game.
+         */
+        public String getPreLaunchCommand() {
+            return options.preLaunchCommand;
+        }
+
+        public NativesDirectoryType getNativesDirType() {
+            return options.nativesDirType;
+        }
+
+        public String getNativesDir() {
+            return options.nativesDir;
         }
 
         public Builder setGameDir(File gameDir) {
@@ -215,18 +392,25 @@ public class LaunchOptions implements Serializable {
             return this;
         }
 
+        public Builder setVersionType(String versionType) {
+            options.versionType = versionType;
+            return this;
+        }
+
         public Builder setProfileName(String profileName) {
             options.profileName = profileName;
             return this;
         }
 
-        public Builder setMinecraftArgs(String minecraftArgs) {
-            options.minecraftArgs = minecraftArgs;
+        public Builder setGameArguments(List<String> gameArguments) {
+            options.gameArguments.clear();
+            options.gameArguments.addAll(gameArguments);
             return this;
         }
 
-        public Builder setJavaArgs(String javaArgs) {
-            options.javaArgs = javaArgs;
+        public Builder setJavaArguments(List<String> javaArguments) {
+            options.javaArguments.clear();
+            options.javaArguments.addAll(javaArguments);
             return this;
         }
 
@@ -270,13 +454,8 @@ public class LaunchOptions implements Serializable {
             return this;
         }
 
-        public Builder setProxyHost(String proxyHost) {
-            options.proxyHost = proxyHost;
-            return this;
-        }
-
-        public Builder setProxyPort(String proxyPort) {
-            options.proxyPort = proxyPort;
+        public Builder setProxy(Proxy proxy) {
+            options.proxy = proxy;
             return this;
         }
 
@@ -297,6 +476,16 @@ public class LaunchOptions implements Serializable {
 
         public Builder setPrecalledCommand(String precalledCommand) {
             options.preLaunchCommand = precalledCommand;
+            return this;
+        }
+
+        public Builder setNativesDirType(NativesDirectoryType nativesDirType) {
+            options.nativesDirType = nativesDirType;
+            return this;
+        }
+
+        public Builder setNativesDir(String nativesDir) {
+            options.nativesDir = nativesDir;
             return this;
         }
 
